fixed status wheel offcenter rotation bug

--- a/styles/shared/status-panel.less
+++ b/styles/shared/status-panel.less
@@ -1,8 +1,8 @@
 @logo-size: 40px;
-@status-light-size: 15px;
+@status-light-size: 14px;
 @status-bar-height: 40px;
-@status-light-left: 22px;
-@status-light-top: 26px;
+@status-light-left: 23px;
+@status-light-top: 27px;
 
 @circle-radius: 30px;
 @circle-border: 6px;
@@ -33,11 +33,7 @@
 }
 
 .status {
-  width: @logo-size;
-  height: @logo-size;
-  margin: auto;
   display: block;
-  float: left;
   font-family: 'icons';
   font-size: @logo-size;
   color: @text-color-very-weak;
